--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,7 +2,10 @@
 title: "PA1_template"
 author: "Satya"
 date: "June 8, 2016"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
+    toc: yes
 ---
 
  
@@ -29,12 +32,12 @@ smedian <- median(stps_by_day$steps)
  
 stps_by_intval <- aggregate(steps ~ interval,data, mean)
  
-plot(stps_by_intval$interval,stps_by_intval$steps, type ="l",xlab="Interval",ylab="Number of Steps",main="Average Number of Steps per Day by Interval")
+plot(stps_by_intval$interval,stps_by_intval$steps, type ="l",xlab="5 Secs Interval",ylab="Avg Number of Steps Taken",main="Average Number of Steps per Day by Interval")
 ```
-
+Finding the 5-minute interval that contains the maximum number of steps on average.
+Interval r maxinterval, on average across all the days in the dataset, contains the maximum number of steps.
 Imputing missing values 
 Calculate new mean and median for imputed data.
-
 
 ```{r mint} 
 
@@ -75,5 +78,5 @@ stps_by_intval_i <- aggregate(steps ~ interval + dow, imputed_data, mean)
 
 library(lattice)
 
-xyplot(stps_by_intval_i$steps ~ stps_by_intval_i$interval|stps_by_intval_i$dow, main="Average Steps per Day by Interval",xlab="Interval", ylab="Steps",layout=c(1,2), type="l")
+xyplot(stps_by_intval_i$steps ~ stps_by_intval_i$interval|stps_by_intval_i$dow, main="Average Steps per Day by Interval",xlab="5 sec Interval", ylab="Number of Steps",layout=c(1,2), type="l")
 ```
